--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     {% include 'css.html' %}
-    <title>React-Django Blog</title>
+    <title>Django-React Blog</title>
   </head>
   <body>
     <div class='container-fluid'>
